--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h2 class="text-3xl font-bold text-center mb-16" data-aos="fade-up">About Me</h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/3 mb-10 md:mb-0 flex justify-center" data-aos="fade-right">
-                    <img src="https://github.com/eecprashant/eecprashant.github.io/blob/eecprashant-patch-3/profile.jpeg" alt="About" class="rounded-lg w-full max-w-md">
+                    <img src="" alt="About" class="rounded-lg w-full max-w-md">
                 </div>
                 <div class="md:w-2/3 md:pl-12" data-aos="fade-left">
                     <h3 class="text-2xl font-semibold mb-4">Computer Engineer & Instructor</h3>
