--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <div class="md:w-1/2 flex justify-center" data-aos="fade-left">
             <div class="glass-card p-2 rounded-full">
-                <img src="https://github.com/eecprashant/eecprashant.github.io/blob/eecprashant-patch-3/profile.jpeg" alt="Profile" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover">
+                <img src="profile.jpeg" alt="Profile" class="rounded-full w-64 h-64 md:w-80 md:h-80 object-cover">
             </div>
         </div>
     </section>
